<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerVertical="true"
    android:background="@color/blue_button"
    android:dividerPadding="20dp"
    android:orientation="vertical"
    android:padding="50dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="What attribute would you like to sort your items by?"
        android:paddingBottom="24dp"
        android:textAlignment="center"
        android:textSize="24sp">
    </TextView>

    <Button
        android:id="@+id/sort_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey_button"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="Date"
        android:textSize="14sp">
    </Button>

    <Button
        android:id="@+id/sort_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey_button"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="30dp"
        android:text="Description"
        android:textSize="14sp">
    </Button>

    <Button
        android:id="@+id/sort_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey_button"
        android:clickable="true"
        android:focusable="true"
        android:text="Make"
        android:textSize="14sp">
    </Button>

    <Button
        android:id="@+id/sort_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey_button"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="70dp"
        android:text="Estimated Value"
        android:textSize="14sp">
    </Button>

    <Button
        android:id="@+id/sort_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/grey_button"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="70dp"
        android:text="Tags"
        android:textSize="14sp">
    </Button>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:checkedButton="@+id/ascending_rb">

        <RadioButton
            android:id="@+id/ascending_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="Ascending"
            android:textAlignment="center"
            android:textSize="16dp" />

        <RadioButton
            android:id="@+id/descending_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false"
            android:padding="4dp"
            android:text="Descending"
            android:textAlignment="center"
            android:textSize="16dp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="20dp">

        <Button
            android:id="@+id/sort_cancel"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CANCEL"

            android:backgroundTint="@color/light_red"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

        <Button
            android:id="@+id/sort_ok"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="CONFIRM"
            android:backgroundTint="@color/light_green"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_weight="0.5"
            android:focusable="true">
        </Button>

    </LinearLayout>


</LinearLayout>