<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/main_page_background">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:textColor="@color/white"
        android:text="@string/app_name"
        android:padding="8dp"
        android:textSize="20sp"
        android:gravity="top">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="10dp"
        >


        <Button
            android:id="@+id/filter_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:outlineProvider="paddedBounds"
            android:background="@drawable/filter"
            />

        <Button
            android:id="@+id/sort_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey_button"
            android:background="@drawable/sort"/>

        <Button
            android:id="@+id/tag_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center"
            android:backgroundTint="@color/grey_button"
            android:background="@drawable/tag">
        </Button>

        <Button
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp">
        </Button>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/filter_type_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

<!--        <TextView-->
<!--            android:id="@+id/filter_type_textview"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text=""-->
<!--            android:paddingStart="10dp"-->
<!--            android:paddingEnd="10dp"-->
<!--            android:textSize="20dp">-->
<!--        </TextView>-->

        <Button
            android:id="@+id/filter_type_rollback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Dismiss Filter"
            android:textSize="20dp">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_type_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:id="@+id/sort_type_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20dp">
        </TextView>

        <Button
            android:id="@+id/sort_type_rollback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="X"
            android:textSize="25dp">
        </Button>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <TextView
            android:background="@color/blue_button"
            android:text="@string/item_name_string"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:paddingHorizontal="5dp"
            />

        <TextView
            android:background="@color/blue_button"
            android:text="@string/item_make_string"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            android:paddingHorizontal="5dp" />

        <TextView
            android:background="@color/blue_button"
            android:id="@+id/item_model"
            android:text="@string/item_model_string"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:maxLines="1"
            android:paddingHorizontal="5dp"
            />

        <TextView
            android:background="@color/blue_button"
            android:id="@+id/item_value"
            android:text="@string/item_value_string"
            android:textSize="14sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:maxLines="1"
            android:paddingHorizontal="5dp" />
    </LinearLayout>
    <ListView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/item_list"
        android:paddingVertical="2dp">
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/select_all_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="select all"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/blue_button"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0"
            android:textStyle="bold"
            android:textSize="20sp"
            android:padding="20sp"
            android:layout_gravity="bottom"/>

        <Button
            android:id="@+id/add_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:backgroundTint="@color/grey_button"
            android:clickable="true"
            android:focusable="true"
            android:text="+"
            android:textSize="30dp"></Button>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cancel"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:backgroundTint="@color/grey_button"
            android:visibility="gone" />
        <Button
            android:id="@+id/delete_button_multiple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:textSize="20sp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginStart="16dp"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>




